--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="generationProcedurale">
             <p class="title">GenerationProcedurale : </p>
-            <button><a href="/DownloadVideoGames/setup_GenerationProcedural.exe" download="setup">Télécharger</a></button>
+            <button><a href="/DownloadVideoGames/setup_GenerationProcedural.exe">Télécharger</a></button>
             <p class="description">Voyagez dans un terrain infini et générer aléatoirement. Survivez face aux créatures. Construisez un village qui vous ressemble.</p>
         </div>
     </body>
