--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
         <title>Download</title>
 
+        <link rel="icon" href="/DownloadVideoGames/Files/icon.png">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap" rel="stylesheet">
@@ -17,8 +19,9 @@
 
         <div class="generationProcedurale">
             <p class="title">GenerationProcedurale : </p>
-            <button><a href="/DownloadVideoGames/setup_GenerationProcedural.exe">Télécharger</a></button>
+            <button><a href="/DownloadVideoGames/Files/setup_GenerationProcedural.exe">Télécharger</a></button>
             <p class="description">Voyagez dans un terrain infini et générer aléatoirement. Survivez face aux créatures. Construisez un village qui vous ressemble.</p>
+            <a href="/DownloadVideoGames/Files/license.txt">License du jeu</a><a href="/DownloadVideoGames/Files/avant.txt">Configuration requise</a>
         </div>
     </body>
 </html>
