--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <link rel="stylesheet" href="index.css">
 
-        <title>Download</title>
+        <title>Download : "the gridventure"</title>
 
         <link rel="icon" href="/DownloadVideoGames/Files/icon.png">
 
@@ -17,11 +17,13 @@
     <body>
         <h1>Selectionner le jeu video à télécharger : </h1>
 
-        <div class="generationProcedurale">
-            <p class="title">GenerationProcedurale : </p>
-            <button><a href="/DownloadVideoGames/Files/download_generation_procedurale_game.exe">Télécharger</a></button>
-            <p class="description">Voyagez dans un terrain infini et générer aléatoirement. Survivez face aux créatures. Construisez un village qui vous ressemble.</p>
-            <a href="/DownloadVideoGames/Files/license.txt">License du jeu</a><a href="/DownloadVideoGames/Files/avant.txt">Configuration requise</a>
+        <div class="the_gridventure">
+            <p class="title">The gridventure : </p>
+            <button><a href="/DownloadVideoGames/Files/download_gridventure.exe">Télécharger</a></button>
+            <p class="description">Voyagez dans un terrain infini et généré aléatoirement. Survivez face aux créatures. Construisez un village qui vous ressemble.</p>
+            <a href="/DownloadVideoGames/Files/license.txt">License du jeu</a>
+            <a href="/DownloadVideoGames/Files/avant.txt">Configuration requise</a>
+            <a href="/DownloadVodeoGames/Files/update.txt">Mises à jours réalisés</a>
         </div>
     </body>
 </html>
