--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <footer>
             <a href="https://patchkit.net/">
-                <img src="/DownloadVideoGames/launcher.png" class="bottom">
+                <img src="/DownloadVideoGames/launcher.png" class="bottom" width="200px">
             </a>
         </footer>
     </body>
